// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiFacetWrapper renders input 1`] = `
<MultiFacet
  label="Test Wrapper"
  onChange={[MockFunction]}
/>
`;

exports[`MultiFacetWrapper renders input with an error message 1`] = `
<MultiFacet
  error="Oh no!"
  label="Test Wrapper"
  onChange={[MockFunction]}
/>
`;
